@@ -23,48 +23,6 @@ end_package
 
 begin_import
 import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|builder
-operator|.
-name|DefaultFormBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|FormLayout
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
-name|DataMap
-import|;
-end_import
-
-begin_import
-import|import
 name|javax
 operator|.
 name|swing
@@ -201,6 +159,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ActionListener
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|concurrent
@@ -218,6 +188,48 @@ operator|.
 name|concurrent
 operator|.
 name|ConcurrentMap
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|jgoodies
+operator|.
+name|forms
+operator|.
+name|builder
+operator|.
+name|DefaultFormBuilder
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|jgoodies
+operator|.
+name|forms
+operator|.
+name|layout
+operator|.
+name|FormLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|DataMap
 import|;
 end_import
 
@@ -732,6 +744,50 @@ expr_stmt|;
 return|return
 name|tokensTableModel
 return|;
+block|}
+specifier|public
+name|void
+name|removeListenersFromButtons
+parameter_list|()
+block|{
+for|for
+control|(
+name|ActionListener
+name|actionListener
+range|:
+name|okButton
+operator|.
+name|getActionListeners
+argument_list|()
+control|)
+block|{
+name|okButton
+operator|.
+name|removeActionListener
+argument_list|(
+name|actionListener
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|ActionListener
+name|actionListener
+range|:
+name|revertButton
+operator|.
+name|getActionListeners
+argument_list|()
+control|)
+block|{
+name|revertButton
+operator|.
+name|removeActionListener
+argument_list|(
+name|actionListener
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 specifier|synchronized
