@@ -23,6 +23,80 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JDialog
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JOptionPane
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ComponentAdapter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ComponentEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -263,80 +337,6 @@ name|Logger
 import|;
 end_import
 
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JDialog
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JOptionPane
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|ComponentAdapter
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|ComponentEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
 begin_class
 specifier|public
 class|class
@@ -519,6 +519,97 @@ operator|.
 name|createDialog
 argument_list|()
 expr_stmt|;
+name|resultDialog
+operator|.
+name|getOkButton
+argument_list|()
+operator|.
+name|addActionListener
+argument_list|(
+name|e
+lambda|->
+block|{
+try|try
+block|{
+if|if
+condition|(
+name|resultDialog
+operator|.
+name|getTableForMap
+argument_list|()
+operator|.
+name|containsKey
+argument_list|(
+name|targetMap
+argument_list|)
+condition|)
+block|{
+name|commit
+argument_list|()
+expr_stmt|;
+name|checkForUnusedImports
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|"Nothing to commit."
+argument_list|)
+throw|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|resultDialog
+operator|.
+name|getRevertButton
+argument_list|()
+operator|.
+name|addActionListener
+argument_list|(
+name|e
+lambda|->
+block|{
+name|resetDialog
+argument_list|()
+expr_stmt|;
+block|}
+argument_list|)
+expr_stmt|;
+name|resultDialog
+operator|.
+name|addComponentListener
+argument_list|(
+operator|new
+name|ComponentAdapter
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|componentHidden
+parameter_list|(
+name|ComponentEvent
+name|e
+parameter_list|)
+block|{
+name|resetDialog
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
 name|logger
 operator|.
 name|info
@@ -617,97 +708,6 @@ operator|.
 name|info
 argument_list|(
 literal|""
-argument_list|)
-expr_stmt|;
-name|resultDialog
-operator|.
-name|getOkButton
-argument_list|()
-operator|.
-name|addActionListener
-argument_list|(
-name|e
-lambda|->
-block|{
-try|try
-block|{
-if|if
-condition|(
-name|resultDialog
-operator|.
-name|getTableForMap
-argument_list|()
-operator|.
-name|containsKey
-argument_list|(
-name|targetMap
-argument_list|)
-condition|)
-block|{
-name|commit
-argument_list|()
-expr_stmt|;
-name|checkForUnusedImports
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|ex
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|CayenneRuntimeException
-argument_list|(
-literal|"Nothing to commit."
-argument_list|)
-throw|;
-block|}
-block|}
-argument_list|)
-expr_stmt|;
-name|resultDialog
-operator|.
-name|getRevertButton
-argument_list|()
-operator|.
-name|addActionListener
-argument_list|(
-name|e
-lambda|->
-block|{
-name|resetDialog
-argument_list|()
-expr_stmt|;
-block|}
-argument_list|)
-expr_stmt|;
-name|resultDialog
-operator|.
-name|addComponentListener
-argument_list|(
-operator|new
-name|ComponentAdapter
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|componentHidden
-parameter_list|(
-name|ComponentEvent
-name|e
-parameter_list|)
-block|{
-name|resetDialog
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 expr_stmt|;
 return|return
