@@ -19,6 +19,40 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JTable
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|table
+operator|.
+name|DefaultTableModel
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ConcurrentMap
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -78,40 +112,6 @@ operator|.
 name|load
 operator|.
 name|DbLoadResultDialog
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|JTable
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|table
-operator|.
-name|DefaultTableModel
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ConcurrentMap
 import|;
 end_import
 
@@ -315,6 +315,11 @@ name|getTableForMap
 argument_list|()
 operator|.
 name|clear
+argument_list|()
+expr_stmt|;
+name|dbLoadResultDialog
+operator|.
+name|removeListenersFromButtons
 argument_list|()
 expr_stmt|;
 name|dbLoadResultDialog
